# cosilico-viewer

./: .gitignore  .install.sh.swp  LICENSE  README.md  install.sh
cosilico-py/: README.md  pyproject.toml
cosilico-py/docker/: Dockerfile
cosilico-py/src/cosilico_py/: config.py  models.py
cosilico-py/src/cosilico_py/client/: cache.py  client.py  experiment.py  structure.py  utils.py
cosilico-py/src/cosilico_py/ports/: anndata.py
cosilico-py/src/cosilico_py/preprocessing/core/: conversion.py  image.py  layer.py  ome.py  tiling.py  zarr.py
cosilico-py/src/cosilico_py/preprocessing/platform_helpers/: experiment.py  x10.py
cosilico-py/src/cosilico_py/storage/: __init__.py  storage.py
cosilico-viewer/: package-lock.json  package.json  svelte.config.js  vite.config.ts
cosilico-viewer/src/: hooks.server.ts
cosilico-viewer/src/lib/: DualURLRangeReader.ts  Sandbox.svelte  ZarrTileViewer.svelte
cosilico-viewer/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
infra/: launch.sh
infra/supabase/: config.toml
infra/supabase/migrations/: 20250529185158_create_users_table.sql  (+1 more)
my-svelte-project/: jsconfig.json  package-lock.json  package.json  tailwind.config.js
my-svelte-project/src/: App.svelte  app.css
notebooks/: .gitignore
notebooks/compute1/: launch_notebooks.sh  log.txt
notebooks/data_preprocessing/: Untitled.ipynb  Untitled1.ipynb  populate_project.ipynb  sandbox.ipynb
notebooks/glacier/: Untitled.ipynb
notebooks/katmai/: populate_data.ipynb
viewer/: package-lock.json  package.json
(+130 files in other folders)
