[project]
name = "cosilico-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "supabase (>=2.15.2,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "tifffile (==2025.3.13)",
    "zarr (>=2,<3)",
    "dask[complete] (>=2025.5.1,<2026.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "ome-types (>=0.6.1,<0.7.0)",
    "pydantic (>=2.11.5)",
    "boto3 (>=1.38.31,<2.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "imagecodecs (>=2025.3.30,<2026.0.0)",
    "anndata (>=0.11.4,<0.12.0)",
    "scanpy (>=1.11.2,<2.0.0)",
    "anytree (>=2.13.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "cosilico_py", from = "src"}]

[tool.poetry.scripts]
cosilico = "cosilico_py.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
